Page All Notes Empty view layout is ready

--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -1,2 +1,12 @@
 @use './variables' as *;
 @use './functions' as *;
+
+.el-message-box.alertSuccessTitle {
+  font-family: getInter();
+  --el-messagebox-title-color: #{$cl-green-500};
+}
+
+.el-message-box.errAlertTitle {
+  font-family: getInter();
+  --el-messagebox-title-color: #{$cl-red-500};
+}
