--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -28,10 +28,16 @@ $txt-cl-description: $cl-neutral-600;
 $txt-cl-input: $cl-neutral-500;
 
 $link-cl-grey: $cl-neutral-600;
+$link-cl-black: $cl-neutral-700;
+$link-cl-active: $cl-blue-500;
+$link-cl-aside-bg-active: $cl-neutral-100;
 
 $bg-cl-base: $cl-neutral-0;
+$bg-cl-header: $cl-neutral-100;
+$bg-cl-nav: $cl-blue-50;
 $bor-cl-base: $cl-neutral-200;
 $bor-cl-input: $cl-neutral-300;
+$bor-cl-menu: $cl-neutral-100;
 
 $btn-bg-base: $cl-blue-500;
 $btn-cl-base: $cl-neutral-0;
@@ -39,5 +45,6 @@ $btn-cl-base: $cl-neutral-0;
 $focus-cl-base: $cl-neutral-950;
 $hover-link-cl: $cl-blue-500;
 $hover-btn-cl: $cl-blue-700;
+$hover-input-cl: $cl-neutral-50;
 
 $error-cl: $cl-red-500;
