--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,6 +10,14 @@ html {
   min-height: 100%;
 }
 
+ul,
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+
 body {
   height: inherit;
   display: flex;
