--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -25,6 +25,7 @@ $shadow-auth-block: 0 8px 12px 0 rgba(240, 240, 240, 0.6);
 
 $txt-cl-h: $cl-neutral-950;
 $txt-cl-description: $cl-neutral-600;
+$txt-cl-description-notes: $cl-neutral-700;
 $txt-cl-input: $cl-neutral-500;
 
 $link-cl-grey: $cl-neutral-600;
@@ -43,6 +44,7 @@ $btn-bg-base: $cl-blue-500;
 $btn-cl-base: $cl-neutral-0;
 
 $focus-cl-base: $cl-neutral-950;
+$focus-cl-btn: $cl-neutral-700;
 $hover-link-cl: $cl-blue-500;
 $hover-btn-cl: $cl-blue-700;
 $hover-input-cl: $cl-neutral-50;
