--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -42,11 +42,13 @@ $bor-cl-menu: $cl-neutral-100;
 
 $btn-bg-base: $cl-blue-500;
 $btn-cl-base: $cl-neutral-0;
+$btn-cl-text: $cl-blue-500;
 
 $focus-cl-base: $cl-neutral-950;
 $focus-cl-btn: $cl-neutral-700;
 $hover-link-cl: $cl-blue-500;
 $hover-btn-cl: $cl-blue-700;
 $hover-input-cl: $cl-neutral-50;
+$placeholder-input-cl: $cl-neutral-400;
 
 $error-cl: $cl-red-500;
