desctop create note layout is ready

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -36,6 +36,7 @@ $link-cl-aside-bg-active: $cl-neutral-100;
 $bg-cl-base: $cl-neutral-0;
 $bg-cl-header: $cl-neutral-100;
 $bg-cl-nav: $cl-blue-50;
+$bg-cl-note: $cl-neutral-100;
 $bor-cl-base: $cl-neutral-200;
 $bor-cl-input: $cl-neutral-300;
 $bor-cl-menu: $cl-neutral-100;
@@ -43,6 +44,7 @@ $bor-cl-menu: $cl-neutral-100;
 $btn-bg-base: $cl-blue-500;
 $btn-cl-base: $cl-neutral-0;
 $btn-cl-text: $cl-blue-500;
+$btn-bg-cancel: $cl-neutral-100;
 
 $focus-cl-base: $cl-neutral-950;
 $focus-cl-btn: $cl-neutral-700;
