tag page and search page are ready routes and stores were updated

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -27,6 +27,7 @@ $txt-cl-h: $cl-neutral-950;
 $txt-cl-description: $cl-neutral-600;
 $txt-cl-description-notes: $cl-neutral-700;
 $txt-cl-input: $cl-neutral-500;
+$txt-cl-tag: $cl-neutral-500;
 
 $link-cl-grey: $cl-neutral-600;
 $link-cl-black: $cl-neutral-700;
@@ -35,6 +36,7 @@ $link-cl-aside-bg-active: $cl-neutral-100;
 
 $bg-cl-base: $cl-neutral-0;
 $bg-cl-header: $cl-neutral-100;
+$bg-cl-tags: $cl-neutral-200;
 $bg-cl-nav: $cl-blue-50;
 $bg-cl-note: $cl-neutral-100;
 $bor-cl-base: $cl-neutral-200;
