archive, restore, delete, plus dialog fully completed

--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -39,6 +39,7 @@ $bg-cl-header: $cl-neutral-100;
 $bg-cl-tags: $cl-neutral-200;
 $bg-cl-nav: $cl-blue-50;
 $bg-cl-note: $cl-neutral-100;
+$bg-cl-icon: $cl-neutral-100;
 $bor-cl-base: $cl-neutral-200;
 $bor-cl-input: $cl-neutral-300;
 $bor-cl-menu: $cl-neutral-100;
@@ -47,9 +48,11 @@ $btn-bg-base: $cl-blue-500;
 $btn-cl-base: $cl-neutral-0;
 $btn-cl-text: $cl-blue-500;
 $btn-bg-cancel: $cl-neutral-100;
+$btn-bg-delete: $cl-red-500;
 
 $focus-cl-base: $cl-neutral-950;
 $focus-cl-btn: $cl-neutral-700;
+$focus-cl-btn-dialog: $cl-neutral-500;
 $hover-link-cl: $cl-blue-500;
 $hover-btn-cl: $cl-blue-700;
 $hover-input-cl: $cl-neutral-50;
