--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -37,12 +37,15 @@ $link-cl-aside-bg-active: $cl-neutral-100;
 $bg-cl-base: $cl-neutral-0;
 $bg-cl-header: $cl-neutral-100;
 $bg-cl-tags: $cl-neutral-200;
+$bg-cl-radio: $cl-neutral-200;
 $bg-cl-nav: $cl-blue-50;
 $bg-cl-note: $cl-neutral-100;
+$bg-cl-radio: $cl-neutral-100;
 $bg-cl-icon: $cl-neutral-100;
 $bor-cl-base: $cl-neutral-200;
 $bor-cl-input: $cl-neutral-300;
 $bor-cl-menu: $cl-neutral-100;
+$bor-cl-radio: $cl-blue-500;
 
 $btn-bg-base: $cl-blue-500;
 $btn-cl-base: $cl-neutral-0;
