ready for first deploy

--- a/src/assets/_functions.scss
+++ b/src/assets/_functions.scss
@@ -1,12 +1,12 @@
-@use 'sass:map';
+@use "sass:map";
 
-@function getInter($weight: 'Regular') {
+@function getInter($weight: "Regular") {
   $families: (
-    'Regular': 'Inter-Regular',
-    'Medium': 'Inter-Medium',
-    'Bold': 'Inter-Bold',
-    'SemiBold': 'Inter-SemiBold',
-    'Italic': 'Inter-Italic',
+    "Regular": "Inter-Regular",
+    "Medium": "Inter-Medium",
+    "Bold": "Inter-Bold",
+    "SemiBold": "Inter-SemiBold",
+    "Italic": "Inter-Italic",
   );
 
   @return map.get($families, $weight);
