--- a/src/assets/_typography.scss
+++ b/src/assets/_typography.scss
@@ -1,90 +1,90 @@
 @font-face {
-  font-family: 'Inter';
+  font-family: "Inter";
   src:
-    local('Inter'),
-    url('./fonts/inter/static/Inter_18pt-Regular.ttf') format('truetype');
+    local("Inter"),
+    url("./fonts/inter/static/Inter_18pt-Regular.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: "Inter";
   src:
-    local('Inter'),
-    url('./fonts/inter/static/Inter_18pt-Medium.ttf') format('truetype');
+    local("Inter"),
+    url("./fonts/inter/static/Inter_18pt-Medium.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: "Inter";
   src:
-    local('Inter'),
-    url('./fonts/inter/static/Inter_18pt-Bold.ttf') format('truetype');
+    local("Inter"),
+    url("./fonts/inter/static/Inter_18pt-Bold.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: "Inter";
   src:
-    local('Inter'),
-    url('./fonts/inter/static/Inter_18pt-SemiBold.ttf') format('truetype');
+    local("Inter"),
+    url("./fonts/inter/static/Inter_18pt-SemiBold.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: "Inter";
   src:
-    local('Inter'),
-    url('./fonts/inter/Inter-Italic-VariableFont_opsz,wght.ttf') format('truetype');
+    local("Inter"),
+    url("./fonts/inter/Inter-Italic-VariableFont_opsz,wght.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'NotoSerif';
+  font-family: "NotoSerif";
   src:
-    local('NotoSerif'),
-    url('./fonts/noto-serif/static/NotoSerif-Regular.ttf') format('truetype');
+    local("NotoSerif"),
+    url("./fonts/noto-serif/static/NotoSerif-Regular.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'NotoSerif';
+  font-family: "NotoSerif";
   src:
-    local('NotoSerif'),
-    url('./fonts/noto-serif/static/NotoSerif-Medium.ttf') format('truetype');
+    local("NotoSerif"),
+    url("./fonts/noto-serif/static/NotoSerif-Medium.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'NotoSerif';
+  font-family: "NotoSerif";
   src:
-    local('NotoSerif'),
-    url('./fonts/noto-serif/static/NotoSerif-Bold.ttf') format('truetype');
+    local("NotoSerif"),
+    url("./fonts/noto-serif/static/NotoSerif-Bold.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'NotoSerif';
+  font-family: "NotoSerif";
   src:
-    local('NotoSerif'),
-    url('./fonts/noto-serif/static/NotoSerif-SemiBold.ttf') format('truetype');
+    local("NotoSerif"),
+    url("./fonts/noto-serif/static/NotoSerif-SemiBold.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'SourceCodePro';
+  font-family: "SourceCodePro";
   src:
-    local('SourceCodePro-Regular'),
-    url('./fonts/source-code-pro/static/SourceCodePro-Regular.ttf') format('truetype');
+    local("SourceCodePro-Regular"),
+    url("./fonts/source-code-pro/static/SourceCodePro-Regular.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'SourceCodePro';
+  font-family: "SourceCodePro";
   src:
-    local('SourceCodePro'),
-    url('./fonts/source-code-pro/static/SourceCodePro-Medium.ttf') format('truetype');
+    local("SourceCodePro"),
+    url("./fonts/source-code-pro/static/SourceCodePro-Medium.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'SourceCodePro';
+  font-family: "SourceCodePro";
   src:
-    local('SourceCodePro'),
-    url('./fonts/source-code-pro/static/SourceCodePro-Bold.ttf') format('truetype');
+    local("SourceCodePro"),
+    url("./fonts/source-code-pro/static/SourceCodePro-Bold.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: 'SourceCodePro';
+  font-family: "SourceCodePro";
   src:
-    local('SourceCodePro'),
-    url('./fonts/source-code-pro/static/SourceCodePro-SemiBold.ttf') format('truetype');
+    local("SourceCodePro"),
+    url("./fonts/source-code-pro/static/SourceCodePro-SemiBold.ttf") format("truetype");
 }
