--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,5 +1,5 @@
-@forward './typography';
-@forward './functions';
-@forward './variables';
-@forward './mixins';
-@forward './global';
+@forward "./typography";
+@forward "./functions";
+@forward "./variables";
+@forward "./mixins";
+@forward "./global";
